(1) Get rid of darcula reflective access warning (2) Don't explicitly use Marlin renderer (it's in-built in Java 11)